# McEx

./: .gitignore  .iex.exs  .projectile  .travis.yml  README.md  design_overview.org  entities.html  entities.org  mix.exs  ttb_last_config
config/: config.exs
doc/: architecture.dot  entity_interactions.org  region_system.org
docs/: all.json
genbiome/: Cargo.toml
genbiome/src/: bin.rs
lib/: chunk.ex  cmd.ex  datatypes.ex  entity.ex  entity_metadata.ex  favicon.ex  gen_room.ex  math.ex  mc_ex.ex  membership_manager.ex  nbt.ex  player.ex  registry.ex  router.ex  server_list_response.ex  server_state.ex  topic.ex  util.ex  uuid.ex
lib/entity/: entity.ex  item.ex  message.ex  player.ex  properties.ex  property.ex  zombie.ex
lib/native/: block_store.ex  chunk.ex  native_store.ex
lib/net/: connection_supervisor.ex  crypto.ex  handler.ex  handler_clauses.ex  in_handlers.ex  listener.ex  net.ex  packets.ex  packets_new.ex  simple_orchestrator.ex  supervisor.ex  transport.ex  uuid.ex
lib/player/: client_event.ex  keep_alive_sender.ex  player.ex  property.ex  server_event.ex  supervisor.ex  world.ex
lib/util/: 3d_dda.ex  aabb.ex  math.ex  membership_manager.ex  vec.ex
lib/values/: blocks.ex  materials.ex
lib/world/: anvil.ex  chunk.ex  chunk_manager.ex  chunk_supervisor.ex  config_server.ex  entity_supervisor.ex  player_tracker.ex  shard.ex  supervisor.ex  ticker.ex  world.ex  world_manager.ex  (+1 more)
rs/: Cargo.toml  build.rs
rs/src/: chunk.rs  chunk_data.rs  nif.rs  opensimplex.c  opensimplex.rs
rs/src/data/: block.rs  chunk.rs  chunk_section.rs
rs/src/nif/: mod.rs
test/: mc_ex_test.exs  membership_manager_test.exs
(+43 files in other folders)
