[package]
name = "mcex_native"
version = "0.0.1"
build = "build.rs"

[lib]
name = "mcex_chunk"
path = "src/chunk.rs"
crate-type = ["dylib"]

[dependencies]
libc = ">=0.1"
byteorder = "0.3.11"

[dependencies.ruster_unsafe]
git = "https://github.com/hansihe/ruster_unsafe.git"

[dependencies.bindgen]
git = "https://github.com/crabtw/rust-bindgen.git"

[build-dependencies]
gcc = "0.3.13"
