[package]
name = "mcex_native"
version = "0.0.1"
build = "build.rs"

[lib]
name = "mcex_chunk"
path = "src/chunk.rs"
crate-type = ["dylib"]

[dependencies]
libc = ">=0.1"
byteorder = "0.3.11"

#[dependencies.rustler]
#git = "https://github.com/hansihe/Rustler.git"

[dependencies.rustler]
path = "../../rustler/"
[dependencies.rustler_codegen]
path = "../../rustler/rustler_codegen/"

#[dependencies.bindgen]
#git = "https://github.com/crabtw/rust-bindgen.git"

[build-dependencies]
gcc = "0.3.13"
