[package]
name = "mcex_native"
version = "0.0.1"

[lib]
name = "mcex_chunk"
path = "src/chunk.rs"
crate-type = ["dylib"]

[dependencies]
libc = ">=0.1"
byteorder = "0.3.11"
time = "0.1.34"
opensimplex = "0.2.0"
rustler = ">=0.8"
rustler_codegen = ">=0.8"

[dependencies.voxel_worldgen]
path = "../../voxel_worldgen/"

#[dependencies.rustler]
#git = "https://github.com/hansihe/Rustler.git"

#[dependencies.rustler]
#path = "../../Rustler/"
#[dependencies.rustler_codegen]
#path = "../../Rustler/rustler_codegen/"

#[dependencies.bindgen]
#git = "https://github.com/crabtw/rust-bindgen.git"

[build-dependencies]
gcc = "0.3.13"
